--- a/js.html
+++ b/js.html
@@ -6,6 +6,32 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="hw8-5.js"></script>
+    <h1 id="title">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, expedita!
+    </h1>
+    <button id="btn">Скрыть текст</button>
+
+    <p id="desc">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+    </p>
+    <p class="desc">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+    </p>
+    <p class="desc">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+    </p>
+    <button style="margin-bottom: 20px" id="btn2">Меняю цвет</button> <br />
+    <button id="btn3">Меняю текст заголовка</button>
+    <p class="description">Lorem ipsum dolor sit amet.</p>
+    <p class="description">Lorem, ipsum dolor.</p>
+    <p class="description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia!
+    </p>
+    <p class="description-double">Lorem</p>
+
+    <button id="addText">Добавлю элемент</button>
+
+    <button id="deletedBtn">Удаляю первый эелемент</button>
+    <script src="hw9.js"></script>
   </body>
 </html>
