--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </div>
     </header>
     <nav class="nav">
+      <div class="nav__progress-bar">
       <ul class="nav__list">
         <li class="nav__item">
           <a class="nav__link-app" href="#">ВИКТОРИНА</a>
@@ -52,6 +53,7 @@
           <span></span>
         </li>
       </ul>
+      </div>
     </nav>
     <main class="main">
       <section class="about center">
