завершена подготовка сайта КУРСОВАЯ

--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
       <div class="nav__progress-bar">
       <ul class="nav__list">
         <li class="nav__item">
-          <a class="nav__link-app" href="#">ВИКТОРИНА</a>
+          <a class="nav__link-app" href="#game5">ВИКТОРИНА</a>
           <span></span>
         </li>
         <li class="nav__item">
-          <a class="nav__link-app" href="#">УГАДАЙ ЧИСЛО</a>
+          <a class="nav__link-app" href="#game1">УГАДАЙ ЧИСЛО</a>
           <span></span>
         </li>
         <li class="nav__item">
-          <a class="nav__link-app" href="#">ПЕРЕВЕРНИ ТЕКСТ</a>
+          <a class="nav__link-app" href="#game3">ПЕРЕВЕРНИ ТЕКСТ</a>
           <span></span>
         </li>
         <li class="nav__item">
-          <a class="nav__link-app" href="#">ПРОСТАЯ АРИФМЕТИКА</a>
+          <a class="nav__link-app" href="#game2">ПРОСТАЯ АРИФМЕТИКА</a>
           <span></span>
         </li>
         <li class="nav__item">
-          <a class="nav__link-app" href="#">КАМЕНЬ, НОЖНИЦЫ, БУМАГА</a>
+          <a class="nav__link-app" href="#game4">КАМЕНЬ, НОЖНИЦЫ, БУМАГА</a>
           <span></span>
         </li>
         <li class="nav__item">
-          <a class="nav__link-app" href="#">ГЕНЕРАТОР СЛУЧАЙНЫХ ЦВЕТОВ</a>
+          <a class="nav__link-app" href="#game6">ГЕНЕРАТОР СЛУЧАЙНЫХ ЦВЕТОВ</a>
           <span></span>
         </li>
       </ul>
       </div>
     </nav>
-    <main class="main">
+    <main class="main" id="backgroundBlock">
       <section class="about center">
         <div class="about__header">
           <div class="box-title">
@@ -96,7 +96,7 @@
             </a>
           </article>
           <article class="about__card">
-            <a class="about__card-body" href="#game4">
+            <a class="about__card-body" href="#game5">
               <img class="about__img" src="./img/about/4.jpeg" alt="Игра №4" />
               <div class="about__card-box">
                 <p class="about__card-btn">Игра №4</p>
@@ -105,7 +105,7 @@
             </a>
           </article>
           <article class="about__card">
-            <a class="about__card-body" href="#game5">
+            <a class="about__card-body" href="#game4">
               <img class="about__img" src="./img/about/5.jpeg" alt="Игра №5" />
               <div class="about__card-box">
                 <p class="about__card-btn">Игра №5</p>
@@ -187,7 +187,7 @@
                 Игра, в которой при клике на кнопку фон страницы меняется на
                 случайный.
               </p>
-              <a class="button mini__card-btn" href="#">Играть!</a>
+              <a class="button mini__card-btn" href="#" id="colorGameButton">Играть!</a>
             </div>
             <img src="./img/mini/6.jpeg" alt="Генератор случайных цветов" />
           </article>
