--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="nav__progress-bar">
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link-app" href="#game5">ВИКТОРИНА</a>
+            <a class="nav__link-app" href="#game4">ВИКТОРИНА</a>
             <span class="nav__stars"></span>
           </li>
           <li class="nav__item">
@@ -45,7 +45,7 @@
             <span class="nav__stars"></span>
           </li>
           <li class="nav__item">
-            <a class="nav__link-app" href="#game4">КАМЕНЬ, НОЖНИЦЫ, БУМАГА</a>
+            <a class="nav__link-app" href="#game5">КАМЕНЬ, НОЖНИЦЫ, БУМАГА</a>
             <span class="nav__stars"></span>
           </li>
           <li class="nav__item">
@@ -189,7 +189,7 @@
             </div>
             <img src="./img/mini/4.jpeg" alt="Викторина" />
           </article>
-          <article class="mini__card mini__card--correct" id="game5">
+          <article class="mini__card" id="game5">
             <div class="mini__card-content">
               <h3 class="mini__card-title">Камень, ножницы, бумага</h3>
               <p class="mini__card-desc">
@@ -205,7 +205,7 @@
             </div>
             <img src="./img/mini/5.jpeg" alt="Камень, ножницы, бумага" />
           </article>
-          <article class="mini__card mini__card--correct" id="game6">
+          <article class="mini__card" id="game6">
             <div class="mini__card-content">
               <h3 class="mini__card-title">Генератор случайных цветов</h3>
               <p class="mini__card-desc">
