--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="box-title">
             <h1 class="title">Добро пожаловать<br />на мой сайт мини-игр</h1>
             <div class="desc">
-              Тебе предстоит пройти несколько увлекательных игр. <br />
-              Если готов, нажимай <b>«Поехали!»</b> и <b>приступай.</b>
+              Тебе предстоит пройти несколько увлекательных игр. Если готов,
+              нажимай <b>«Поехали!»</b> и <b>приступай.</b>
             </div>
           </div>
           <a class="button header__btn" href="#go">Поехали!</a>
